platform_admins/starter_repos/online_boutique/ob/release/manifests/virtualservice--frontend.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
    - "frontend.default.svc.cluster.local"
  http:
    - route:
        - destination:
            host: frontend
            port:
              number: 80
